--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.avaya.oceanareferenceclient"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 31
 
         versionCode 6
         versionName "4.0.5"
@@ -80,10 +80,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.netty:netty-all:4.1.17.Final'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.github.clans:fab:1.6.4'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference:1.0.0"
-
+    implementation project(':library')
 
 }
 
